Add react APIs + frontend build

--- a/views/components/nav.pug
+++ b/views/components/nav.pug
@@ -1,3 +1,4 @@
+<!--suppress HtmlDeprecatedAttribute -->
 style(type="text/tailwindcss").
     ul.inline-nav li {
         @apply inline self-center;
